# machine-learning

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  csv.py  debug.bat  ding.bat  ling.bat  m.js  main.cpp  make15and20compatible.py  package-lock.json  package.json  rabid.bat  release.bat  splitcsvab.py  vcpkg-configuration.json  vcpkg.json
.github/workflows/: cmake-multi-platform.yml  multi-platform-vcpkg.yml  single-platform-ubuntu.yml
headers/: arguments.hpp  csv_utils.hpp  linear_regression.hpp  linear_regression_impl.hpp  load_model.hpp  log.hpp  logistic_regression.hpp  model_types.hpp  regression_models.hpp  save_model.hpp  template.hpp
log/: 2015_test.csv  2016_test.csv  2017_test.csv  2018_test.csv  2019_test.csv  2020_test.csv  run.csv
save/: csvtodo.cpp  printtime.cpp  stop_building_cli.cpp
tests/: test_main.cpp
world_happiness_data/: 2015a.csv  2015b.csv  2015b_threshold.csv  2016a.csv  2016a_threshold.csv  2016b.csv  2016b_threshold.csv  2017a.csv  2017a_threshold.csv  2017b.csv  2018a.csv  2018a_threshold.csv  2018b.csv  2018b_threshold.csv  2019a.csv  2019a_threshold.csv  2019b.csv  2019b_threshold.csv  2020a.csv  2020a_threshold.csv  2020b.csv  2020b_threshold.csv
